2002-10-08  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-ellipse.c (sp_arc_modified): Continue upstream

2002-10-07  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-text.c: Moved frontends here

	* src/dialogs/node-edit.h: Moved declarations here

	* src/desktop.c (sp_desktop_widget_view_position_set): Use grid placement
	(sp_desktop_widget_namedview_modified): Read grid placement
	(sp_desktop_widget_update_rulers): Use grid placement
	(sp_desktop_set_coordinate_status): Disable, until sorted out

	* src/widgets/font-selector.c (sp_font_selector_set_font): Implement

	* src/libnrtype/nr-rasterfont.c (nr_rasterfont_ensure_glyph_slot): Oops, alloc
	and clear the right number of blocks

	* src/libnr/nr-compose.c (nr_R8G8B8_R8G8B8_A8_RGBA32): Implement
	(nr_R8G8B8_EMPTY_A8_RGBA32): Implement

	* src/libnr/nr-blit.c (nr_blit_pixblock_mask_rgba32): Implement

	* src/widgets/font-selector.c (sp_font_preview_expose): Implement
	(sp_font_preview_set_font): Ditto

	* src/libnr/nr-pixblock-pattern.h: New file

	* src/libnr/nr-pixblock-pattern.c: New file

2002-10-06  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/toolbox.c (sp_toolbox_draw_create): Do not expand/fill use correct name for text

	* sodipodi.spec.in: Update to cleaner version by Dag Vieers

	* src/sp-text.c (sp_text_is_empty): New method
	(sp_string_release): Use ::release, not ::destroy
	(sp_tspan_release): Ditto
	(sp_text_release): Ditto

	* src/text-context.c (sp_text_context_selection_changed): Forget text
	(sp_text_context_forget_text): New method, remove empty text item

	* src/sp-text.c (sp_tspan_build): Ensure there is always text child

	* src/sp-item-group.c (sp_group_bbox): Do not set bbox to 0,0,0,0

	* src/select-context.c (sp_select_context_root_handler): Set grabbed to NULL on release

	* src/path-chemistry.c (sp_selected_path_combine): Use item2root transform
	(sp_selected_path_break_apart): Ditto

	* src/sp-item.c (sp_item_i2root_affine): New method
